# 3DPrinterCalcApp

./: .gitignore  AUTOSAVE_BACKUP_SYNC.md  BACKUP_REMINDER_LOGIC.md  BUILD.md  CHANGELOG_0.6.0_to_1.1.0.md  CHANGELOG_v3.0.3.md  CHANGELOG_v3.0.4.md  COMPLETED.md  CREATE_FIRST_RELEASE.md  CROSS_PLATFORM_PATHS.md  CURRENT_STATUS.md  DATA_TAB_CREATION_PLAN.md  DIAGNOSZTIKA.md  EXCLUDED_FEATURES.md  FEATURE_IMPLEMENTATION_PLAN.md  FEATURE_SUGGESTIONS.md  FEJLESZTESI_OSSZEFOGLALO.md  GITHUB_ACTIONS_SETUP.md  GITHUB_WIKI_HOME.en.md  GITHUB_WIKI_HOME.md  HOW_TO_BUILD_APP.md  IMPLEMENTACIO_FEJLESZTES.md  IMPLEMENTATION_PLAN.md  JAVITASOK_OSSZEFOGLALO.md  LICENSE  LOGGING.md  PLATFORM_FEATURES_AND_ISSUES.md  README.cs.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.hu.md  README.it.md  README.md  README.pl.md  README.pt.md  README.ru.md  README.sk.md  README.temp.en.md  (+28 more)
.github/workflows/: build-beta.yml  build-new_beta.yml  build.yml
docs/: MODULAR_ARCHITECTURE.md  PERFORMANCE.md
docs/images/: README.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/scripts/: auto-translate-locales.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AppSkeleton.tsx  AuditLogViewer.tsx  AuthGuard.tsx  BackupReminder.tsx  Breadcrumb.tsx  BudgetManagement.tsx  Calculator.tsx  Calendar.tsx  Card.tsx  ConfirmDialog.tsx  Console.tsx  Customers.tsx  EmptyState.tsx  EncryptionPasswordPrompt.tsx  ErrorBoundary.tsx  FactoryResetProgress.tsx  FilamentStockManagement.tsx  Filaments.tsx  GlobalSearch.tsx  Header.tsx  HelpMenu.tsx  Home.tsx  LanguageSelector.tsx  LazyErrorBoundary.tsx  LoadingSkeleton.tsx  LoadingSpinner.tsx  LogViewer.tsx  Offers.tsx  PriceTrends.tsx  Printers.tsx  Tasks.tsx  (+14 more)
scripts/: convert-filament-csv.mjs  generate-color-presets.mjs  generate-icns.sh  generate-icons.js  generate-icons.sh
src-tauri/: Cargo.toml  run-build.sh  run-dev.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  encryption.rs  logger.rs  main.rs
(+223 files in other folders)
