[package]
name = "app"
version = "0.2.0"
description = "A Tauri App"
authors = ["Lekszikov Miklós (LexyGuru)"]
license = "MIT OR Proprietary"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["wry"] }

# opcionális pluginok, ha kell

tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-log = "2.0.0"
tauri-plugin-store = "2.4.1"
dirs = "6.0.0"

# Force newer version of num-bigint-dig to fix deprecation warning
num-bigint-dig = ">=0.9.0"
