[package]
name = "app"
version = "1.6.0"
description = "A Tauri App"
authors = ["Lekszikov Miklós (LexyGuru)"]
license = "MIT OR Proprietary"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["macos-private-api", "wry"] }

# Pluginok - kompatibilis verziók a Tauri 2.9.2-hez
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-store = "2.4.1"
tauri-plugin-notification = "2.3.3"
dirs = "6.0.0"
chrono = "0.4"


# Encryption dependencies
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
lazy_static = "1.5"
pbkdf2 = "0.12"
sha2 = "0.10"

# Force newer version of num-bigint-dig to fix deprecation warning
num-bigint-dig = ">=0.9.0"
